[CharacterCreation] fix bug on mobile

--- a/src/app/rules/character-creation/character-creation.component.scss
+++ b/src/app/rules/character-creation/character-creation.component.scss
@@ -8,13 +8,16 @@
     width: 100px;
 }
 
+.invisibleButton {
+    visibility: hidden;
+}
+
 .text-container {
-    height: 800px;
     border: 1px black solid;
     flex-grow: 1;
-    overflow: scroll;
     padding-left: 12px;
     padding-right: 12px;
+    padding-bottom: 18px;
 }
 
 span {
